# govm

./: .gitignore  Makefile  README.md  go.mod
.github/workflows/: build-native.yml  test.yml
cmd/govm-doctor/: main.go
cmd/govm-gc/: main.go
docs/: boxlite-ffi-box-stop-fix.md  networking.md
docs/plans/: 2026-03-04-network-api-design.md  2026-03-04-network-api-implementation-plan.md
examples/all-api/: main.go
examples/basic/: main.go
examples/offline/: main.go
internal/binding/: binding_native.go  binding_stub.go  dep_stubs.c  exec_bridge.c  exec_native.go  ld_darwin_arm64.go  ld_linux_amd64.go  ld_linux_arm64.go
internal/offline/: offline.go
internal/offline/images/py312-alpine/: manifest.txt
internal/runtimeassets/: runtimeassets.go  runtimeassets_test.go
internal/runtimeassets/runtime/linux_amd64/: README.txt  bwrap  debugfs  mke2fs
pkg/client/: binding_mock_test.go  box.go  box_test.go  client.go  client_test.go  errors.go  home.go  native_integration_test.go  network.go  network_test.go  offline.go  types.go
rust-bridge/: Cargo.toml
rust-bridge/.stub-native-libs/: empty.c
rust-bridge/src/: lib.rs
scripts/: build-bridge.sh  vendor-boxlite.sh  vendor-runtime.sh  verify-native.sh  verify-platform-assets.sh  verify-runtime.sh
