[package]
name = "govm-boxlite-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
boxlite = { git = "https://github.com/boxlite-ai/boxlite", package = "boxlite" }
boxlite-ffi = { git = "https://github.com/boxlite-ai/boxlite", package = "boxlite-ffi", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "time", "sync"] }
futures = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
